# AWE

./: .gitignore  README.md  pyproject.toml
new/gui_trace_evaluator/: OFFICIAL_ADAPTER_NOTES.md  README.md  pyproject.toml  requirements.txt
new/gui_trace_evaluator/examples/: minimal_records.json
new/gui_trace_evaluator/gui_trace_evaluator/: __init__.py  calibration.py  evaluator.py  json_utils.py  models.py  official_messages.py  pipeline_runner.py  prompts.py  read_tools.py  record_adapter.py  runner.py  statistics.py
new/gui_trace_evaluator/results/: doubao18_gui_eval_smoke_1record_20260424.json  doubao18_gui_eval_smoke_1record_20260424.md  doubao18_gui_eval_smoke_ark_1record_20260424.json  doubao18_gui_eval_smoke_ark_1record_20260424.md  doubao18_gui_eval_smoke_ark_1record_fixed_20260424.json  doubao18_gui_eval_smoke_openai_1record_fixed_20260424.json  eval_after_hardening_filesdelete.json  eval_from_scratch_filesdelete_300_20260425.json  eval_from_scratch_filesdelete_300_after_cp_rule.json  eval_from_scratch_filesmove_20260425.json  eval_from_scratch_filesmove_20260425_retry1.json  eval_from_scratch_filesmove_20260425_retry1.md  eval_from_scratch_filesmove_300_retry1_20260425.json  eval_from_scratch_systemwifi_300_20260425.json  eval_from_scratch_systemwifi_300_20260425.md  eval_gui_demo_filesdelete_3records_generic_aw_context_20260425.json  eval_gui_demo_filesdelete_3records_generic_aw_context_20260425.md  eval_long_files_markor_20260424.json  eval_long_files_markor_20260424.md  eval_long_files_markor_20260424_after_payload_fix_v3.json  (+41 more)
(+193 files in other folders)
