[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awe"
version = "0.1.0"
description = "Checkpoint-based LLM trace evaluator for AndroidWorld"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
]

[project.optional-dependencies]
screenshot = ["Pillow>=9.0"]
all = ["awe[screenshot]"]

[project.scripts]
awe-eval = "awe.runner:main"
