[project]
name = "doubao-gui-trace-evaluator"
version = "0.1.0"
description = "Standalone Doubao official-style GUI trace evaluator"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
ark = [
  "volcengine-python-sdk[ark]>=1.0.0",
]
test = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
